--- a/dinodex.css
+++ b/dinodex.css
@@ -7,6 +7,8 @@ html {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
 }
 .page-wrap {
     display: table;
@@ -14,23 +16,24 @@ html {
     background: white;
     padding: 5px;
     cursor: pointer;
+    text-align: center;
 }
 .keypad {
-    float: left;
+    float: center;
     text-align: center;
     font-family: 'Helvetica Neue', sans-serif;
     font-weight: 100;
 }
 .keypad > span {
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     margin: 10px;
-    line-height: 50px;
+    line-height: 75px;
     border-radius: 50px;
     border: 1px #5A58FF solid;
     background-color: white;
-    font-size: 26px;
+    font-size: 48px;
     color: #343434;
     transition: .5s;
     -webkit-transition: .5s;
