--- a/dinodex.css
+++ b/dinodex.css
@@ -12,9 +12,9 @@ html {
 }
 .page-wrap {
     display: table;
-    margin: 50px auto;
+    margin: 0px auto;
     background: white;
-    padding: 5px;
+    padding: 0px;
     cursor: pointer;
     text-align: center;
 }
@@ -24,25 +24,133 @@ html {
     font-family: 'Helvetica Neue', sans-serif;
     font-weight: 100;
 }
-.keypad > span {
+.keypad > button {
     display: inline-block;
     width: 75px;
     height: 75px;
-    margin: 10px;
+    margin: 5px;
     line-height: 75px;
     border-radius: 50px;
     border: 1px #5A58FF solid;
     background-color: white;
-    font-size: 48px;
+    font-size: 20px;
     color: #343434;
     transition: .5s;
     -webkit-transition: .5s;
+    
 }
-.keypad > span:active {
+.keypad > button:active {
     color: white;
     background: #5A58FF;
     transition: 0s;
     -webkit-transition: 0s;
+}
+.test {
+    float: center;
+    text-align: center;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+}
+.test > button {
+    position:relative;
+    top:0;
+    right:0;
+}
+.nav-bar-div{
+    background: #000;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    padding: 10px;
+    float: center;
+    text-align: center;
+    color: white;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-weight: 140;
+}
+.back-button-div{
+    background: #000;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    padding: 10px;
+}
+
+.back-button {
+    float: center;
+    text-align: center;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-weight: 120;
+    color: white;
+    z-index: 1;
+    background: #950006;
+    background: -moz-linear-gradient(top, #de0009 0%, #950006 100%);
+    background: -o-linear-gradient(top, #de0009 0%, #950006 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #de0009), color-stop(100%, #950006));
+    background: -webkit-linear-gradient(top, #de0009 0%, #950006 100%);
+    background: linear-gradient(top, #de0009 0%, #950006 100%);
+    border: solid #dd0009;
+    border-width: 1px 1px 1px 0;
+    -moz-border-radius: 0 5px 5px 0;
+    -webkit-border-radius: 0 5px 5px 0;
+    border-radius: 0 5px 5px 0;
+    display: inline-block;
+    height: 28px;
+    line-height: 28px;
+    margin-left: 20px;
+    margin-right: 2px;
+    padding: 0 7px 0 3px;
+    position: relative;
+    text-decoration: none;
+}
+
+.back-button:before {
+    
+    background: #950006;
+    background: -moz-linear-gradient(-45deg, #de0009 0%, #950006 100%);
+    background: -o-linear-gradient(-45deg, #de0009 0%, #950006 100%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #de0009), color-stop(100%, #950006));
+    background: -webkit-linear-gradient(-45deg, #de0009 0%, #950006 100%);
+    background: linear-gradient(-45deg, #de0009 0%, #950006 100%);
+    border: solid #dd0009;
+    border-width: 0 0 1px 1px;
+    border-radius: 2px 0 2px 2px;
+    content: '';
+    display: block;
+    height: 21px;
+    left: -11px;
+    position: absolute;
+    top: 3px;
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    width: 21px;
+    z-index: -1;
+}
+
+.back-button:hover, .back-button:focus {
+    border-color: #b50007;
+    background: #7e0004;
+    background: -moz-linear-gradient(top, #b50007 0%, #7e0004 100%);
+    background: -o-linear-gradient(top, #b50007 0%, #7e0004 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b50007), color-stop(100%, #7e0004));
+    background: -webkit-linear-gradient(top, #b50007 0%, #7e0004 100%);
+    background: linear-gradient(top, #b50007 0%, #7e0004 100%);
+}
+
+.back-button:hover:before, .back-button:focus:before {
+    border-color: #b50007;
+    background: #7e0004;
+    background: -moz-linear-gradient(-45deg, #b50007 0%, #7e0004 100%);
+    background: -o-linear-gradient(-45deg, #b50007 0%, #7e0004 100%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #b50007), color-stop(100%, #7e0004));
+    background: -webkit-linear-gradient(-45deg, #b50007 0%, #7e0004 100%);
+    background: linear-gradient(-45deg, #b50007 0%, #7e0004 100%);
+}
+
+.back-button span {
+    color: #fff;
+    font-weight: bold;
+    position: relative;
 }
 .main {
   text-align: center;
